[tool.poetry]
name = "sample-flask-app"
version = "0.1.0"
description = "Sample Flask app for alles"
authors = ["Friday Godswill <faradayyg@gmail.com>"]
readme = "README.md"
packages = [{include = "sample_flask_app"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
sentry-sdk = {extras = ["flask"], version = "^2.0.1"}
prometheus-flask-exporter = "^0.23.0"
uwsgi = "^2.0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
